--- a/css/index.css
+++ b/css/index.css
@@ -177,7 +177,7 @@
 }
 
 #perfil-img{
-	background-image: url("../img/iago.jpg");
+	background-image: url("https://ca.slack-edge.com/T1GR0M2TZ-U020QGJBP7U-b2f10433a02d-512");
 	padding: 0;
 	width: 20em;
 	height: 20em;
